# autotools

./: Makefile.am  README.md  configure.ac
doc/: Makefile.in  OVERVIEW
man/: Makefile.am  Makefile.in  hello.8  helloworld.8  world.8
script/: Makefile.am  Makefile.in  helloworld.sh
src/: Makefile.am  Makefile.in  hello.c  hello.h  world.c  world.h
